Fix crashing when running from jar